# short-term-trader

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
backtest/: analysis.py  engine.py  optimizer.py  reporting.py  walkforward.py
config/: regime_weights.json  strategy_params.json  universe.json
dashboard/: app.py
data/: catalysts.py  feature_store.py  providers.py  warehouse.py
data/features/: __init__.py  momentum.py  volatility.py
execution-plan/: volatility_algo_execution_plan.html
live/: __main__.py  backtester.py  broker.py  capital.py  health.py  positions.py  runner.py  scanner_report.py
ml/: __init__.py  cma_joint_optimizer.py  meta_regime_detector.py  online_threshold.py  optuna_dashboard.py  rl_regime_weights.py  utils.py  xgboost_signal_filter.py
scanner/: universe.py
signals/: aggregator.py  base.py  breakout.py  catalyst.py  config_loader.py  mean_reversion.py  momentum_pairs.py  regime.py  risk_filter.py  strategy.py
tests/: conftest.py  test_aggregator.py  test_analysis.py  test_backtest_engine.py  test_breakout.py  test_broker.py  test_capital.py  test_catalyst.py  test_catalysts.py  test_config_loader.py  test_data_providers.py  test_feature_store.py  test_mean_reversion.py  test_ml_cma.py  test_ml_online_threshold.py  test_ml_utils.py  test_momentum.py  test_momentum_pairs.py  test_optimizer.py  test_regime.py  test_risk_filter.py  test_scanner_report.py  test_signals.py  test_universe.py  test_volatility.py  test_walkforward.py  test_warehouse.py
utils/: logging.py
